# openmp

./: README.md  actividad1_original.c  actividad1_step_times.c  fopenmp_comparison.sh  full_execution_times.csv  full_execution_times.sh  full_execution_times_i5_10210U.csv  nb.ipynb  omp_steps_times.sh  openmp_test.c  plots.ipynb  pyproject.toml  step_times_i5_10210U.csv  step_times_i7_12700K.csv  suma_paralela.c  suma_paralela_gpu
