[tool.poetry]
name = "Actividad 1"
version = "0.1.0"
description = ""
authors = ["Gonzalo Baliarda <gbaliarda@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"